# OP2NetworkTools

./: DISCOVERY_PROTOCOL.md  JOIN_PROTOCOL.md  NETWORK_PROTOCOL.md  NOTES.md  PROTOCOL.md  README.md  START_CHECKSUM.md
OP2DummyPlayer/: .gitignore  CMakeLists.txt  README.md  imgui.ini  winbuild.bat
OP2DummyPlayer/res/: app.rc.in
OP2DummyPlayer/src/gui/: main.cpp
OP2DummyPlayer/src/net/: op2client.cpp  op2client.h  op2proto.cpp  op2proto.h
OP2LanScan/: OP2LanScan.slnx  README.md
OP2LanScan/OP2LanScan/: OP2LanScan.csproj  Op2Discovery.cs  Program.cs  fMain.Designer.cs  fMain.cs
OP2LanScan/OP2LanScan/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
OP2Session/: README.md  build.bat  op2session.cpp  op2session.ini
OP2SessionLogger/: CMakeLists.txt  FINDINGS.md  README.md  command_packet_opcodes.tsv  imgui.ini  winbuild.bat
OP2SessionLogger/res/: app.rc.in
OP2SessionLogger/src/gui/: main.cpp
OP2SessionLogger/src/net/: op2client.cpp  op2client.h  socket_compat.h
